cf_analysis_results/checkerframework_results/url6f34cc586e_mekku93_sxl_interpreter_repl_tgz-pJ8-com_miguel_sxl_SXLJ8.txt
../../../../datasets/june2020_dataset/url6f34cc586e_mekku93_sxl_interpreter_repl_tgz-pJ8-com_miguel_sxl_SXLJ8/src/com/miguel/sxl/SXL.java:29: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1196 $$ java.util.Scanner $$ regular method exit $$ ( 692, 758 ) $$ @MustCall method close may not have been invoked on temp-var-1196 or any of its aliases.
		scanner = new Scanner(System.in).useDelimiter(Pattern.compile("[\\r\\n;]+"));
		                                             ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url6f34cc586e_mekku93_sxl_interpreter_repl_tgz-pJ8-com_miguel_sxl_SXLJ8/src/com/miguel/sxl/SXL.java:51: error: (required.method.not.called) $$ 4 $$ method close $$ input $$ java.io.InputStream $$ variable overwritten by assignment input = new FileInputStream(new File(s)) $$ ( 1191, 1235 ) $$ @MustCall method close may not have been invoked on input or any of its aliases.
					input = new FileInputStream( new File( s ) );
					      ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: variable overwritten by assignment input = new FileInputStream(new File(s))
Note: ../../../../datasets/june2020_dataset/url6f34cc586e_mekku93_sxl_interpreter_repl_tgz-pJ8-com_miguel_sxl_SXLJ8/src/com/miguel/sxl/SXLVistor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
